[package]
name = "chibidb"
version = "0.0.1"
authors = ["totechite <yutan.h9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
protobuf = "2.10.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
protoc-rust = "2.0"
